updated milestone status changes and display
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3441 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/apps/projman/templates/milestones.html
+++ b/apps/projman/templates/milestones.html
@@ -158,7 +158,9 @@
 			
 			$('.milestone .msDeadline :select').change(function() {
 					var milestone = $(this).parents('.milestone');
-					$.post('{% url pm_milestonestatus %}', { 'milestone_id': milestone.attr('rel'), 'status': $(this).val() }, function(response) {
+					var status = $(this).val();
+					var reason = (status == 'onhold') ? prompt('Please enter a reason for this change in status:') : '';
+					$.post('{% url pm_milestonestatus %}', { 'milestone_id': milestone.attr('rel'), 'status': status, 'reason': reason }, function(response) {
 							alert('Status Updated!');
 						});
 				});
