--- a/apps/projman/templates/milestones_css.html
+++ b/apps/projman/templates/milestones_css.html
@@ -14,6 +14,9 @@
 .milestonesActiveHeader {
 }
 
+.milestonesComplete {
+}
+
 .milestonesOnHoldHeader {
 }
 
@@ -22,6 +25,9 @@
 }
 
 .milestonesActive {
+}
+
+.milestonesComplete {
 }
 
 .milestonesOnHold {
@@ -63,6 +69,32 @@
 	font-weight: normal;
 	padding: 5px 0;
 	color: #666;
+}
+
+.milestoneComplete .msPercCompleted {
+	border: 2px solid #000;
+	text-align: center;
+	font-size: 14px;
+	font-weight: bold;
+	font-family: Georgia;
+	color: #fff;
+	padding: 6px;
+	float: left;
+	margin-right: 5px;
+}
+
+.milestoneComplete .msName {
+	font-weight: bold;
+	color: #c62d7d;
+}
+
+.milestoneComplete .msDescription {
+	padding: 5px 0;
+	color: #666;
+}
+
+.milestoneComplete .msDeadline {
+	color: #aaa;
 }
 
 .milestoneOnHold .msPercCompleted {
