changed editable fields, updated milestone template
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3445 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/apps/projman/templates/milestones_css.html
+++ b/apps/projman/templates/milestones_css.html
@@ -24,6 +24,10 @@
 	margin: 0 35px 1em 35px;
 }
 
+.milestone {
+	margin-bottom: 1em;
+}
+
 .milestonesActive {
 }
 
@@ -66,7 +70,6 @@
 }
 
 .milestoneOverview .msDescription {
-	font-weight: normal;
 	padding: 5px 0;
 	color: #666;
 }
