--- a/apps/projman/templates/overview.html
+++ b/apps/projman/templates/overview.html
@@ -84,6 +84,10 @@
 	#chronology {
 		margin: 0 35px 1em 35px;
 	}
+	
+	.msMeta {
+		width: 750px;
+	}
 </style>
 {% include "milestones_css.html" %}
 {% show_milestones category %}
