updating home page quick links and reordering
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3447 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/site_media/css/default.css
+++ b/site_media/css/default.css
@@ -284,7 +284,7 @@ a:hover {
 	font-weight: bold;
 }
 
-.links li.projectLink {
+.links li.projectLink, .links li.milestoneLink {
 	font-weight: normal;
 }
 
