--- a/apps/projman/templates/home.html
+++ b/apps/projman/templates/home.html
@@ -40,9 +40,9 @@
 					<ul class="categoryLinks" rel="category">
 						{% for category in request.account.category_set.all %}
 						<li class="categoryLink" rel="{{ category.id }}"><span class="handle"><img src="/site_media/images/list_ordered.gif"/></span> <a href="#category{{ category.id }}">{{ category.name }}</a>
-							<ul class="projectLinks" rel="project">
-							{% for project in category.project_set.all %}
-								<li class="projectLink" rel="{{ project.id }}"><span class="handle"><img src="/site_media/images/list_ordered.gif"/></span> <a href="#project{{ project.id }}">{{ project.name }}</a></li>
+							<ul class="milestoneLinks" rel="milestone">
+							{% for milestone in category.milestone_set.all %}
+								<li class="milestoneLink" rel="{{ milestone.id }}"><span class="handle"><img src="/site_media/images/list_ordered.gif"/></span> <a href="#milestone{{ milestone.id }}">{{ milestone.name }}</a></li>
 							{% endfor %}
 							</ul>
 						</li>
@@ -53,8 +53,11 @@
 		</td>
 	</tr>
 </table>
+{% include "shared_js.html" %}
 <script type="text/javascript" language="javascript">
 $(document).ready(function() {
+		$('.categoryLinks, .milestoneLinks').sortable(sortableOptions_reorder);
+		
 		$('.addCategoryContainer :button').click(function() {
 				var f = $(this.form);
 				$(':input[name=priority]', f).val($('.category').length);
