--- a/apps/projman/templates/tasks.html
+++ b/apps/projman/templates/tasks.html
@@ -62,6 +62,7 @@
 <div id="addTaskTemplateContainer" style="display: none;">
 	{% include "addtask.html" %}
 </div>
+{% include "shared_js.html" %}
 <script type="text/javascript" language="javascript">
 var sortableOptions_tasks = {
 		handle: '.handle',
@@ -81,36 +82,6 @@ var sortableOptions_tasks = {
 								function(n) { return $(n).attr('rel'); }
 							));
 			$.post('/pm/prioritize/task/'+project.attr('rel')+'/', { 'order': order.join(',') }, function(response) {}, 'json');
-		}
-	};
-		
-var sortableOptions_reorder = {
-		handle: '.handle',
-		receive: function(event, ui) {
-		},
-		remove: function(event, ui) {
-		},
-		update: function(event, ui) {
-			var parent = $(ui.item).parent();
-			var type = parent.attr('rel');
-			var order = $('.'+type+'Link', parent);
-			
-			$.each(order, function(i, el) {
-				var match = $('#'+type+$(el).attr('rel'));
-				$(match).parent().append(match);
-			});
-			
-			order = $.makeArray($.map(order, 
-							function(n) { return $(n).attr('rel'); }
-						));
-			
-			if(type == 'category') {
-				var parentId = $('#account').attr('rel');
-			} else if(type == 'project') {
-				var parentId = $(ui.item).parents('.categoryLink').attr('rel');
-			}
-			
-			$.post('/pm/prioritize/'+type+'/'+parentId+'/', { 'order': order.join(',') }, function(response) {}, 'json');
 		}
 	};
 		
