updated milestones css, email when message posted, bug fixes
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3448 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/apps/projman/templates/milestones_css.html
+++ b/apps/projman/templates/milestones_css.html
@@ -126,4 +126,8 @@
 .milestoneOnHold .msDeadline {
 	color: #aaa;
 }
+
+.msName a, .msName a:active, .msName a:hover, .msName a:visited {
+	color: #C62D7D;
+}
 </style>
