--- a/apps/projman/templates/show_milestones.html
+++ b/apps/projman/templates/show_milestones.html
@@ -10,9 +10,9 @@
 			<div id="milestone{{ milestone.id }}" class="milestoneOverview milestone floatContainer">
 				<div class="msPercCompleted" style="background: {% perc_colorizer milestone.perc_completed %}; border-color: {% perc_colorizer_dark milestone.perc_completed 50 %}">{{ milestone.perc_completed|floatformat:2 }}%</div>
 				<div class="msMeta">
-					<div class="msName">{{ milestone.name }}</div>
+					<div class="msName"><a href="{% url pm_milestones category.id %}">{{ milestone.name }}</a></div>
 					<div class="msDescription">{{ milestone.description }}</div>
-					<div class="msDeadline">started <strong>{{ milestone.created|date:"Y-m-d" }}</strong> - deadline <strong>{{ milestone.deadline|date:"Y-m-d" }}</strong> - <strong>{{ milestone.days_remaining.days }}</strong> day{% ifnotequal milestone.days_remaining.days 1 %}s{% endifnotequal %} remaining</div>
+					<div class="msDeadline" style="color: {% milestone_deadline_color milestone %}">started <strong>{{ milestone.created|date:"Y-m-d" }}</strong> - deadline <strong>{{ milestone.deadline|date:"Y-m-d" }}</strong> - {% milestone_days_remaining milestone %}</div>
 				</div>
 			</div>
 		{% endfor %}
@@ -25,10 +25,10 @@
 			<div id="milestone{{ milestone.id }}" class="milestoneComplete milestone floatContainer">
 				<div class="msPercCompleted" style="background: {% perc_colorizer milestone.perc_completed %}; border-color: {% perc_colorizer_dark milestone.perc_completed 50 %}">{{ milestone.perc_completed|floatformat:2 }}%</div>
 				<div class="msMeta">
-					<div class="msName">{{ milestone.name }}</div>
+					<div class="msName"><a href="{% url pm_milestones category.id %}">{{ milestone.name }}</a></div>
 					<div class="msDescription">{{ milestone.description }}</div>
 					{% if milestone.last_status_change %}
-					<div class="msDeadline">completed: <strong>{{ milestone.last_status_change.timestamp|date:"Y-m-d" }}</strong></div>
+					<div class="msDeadline" style="color: {% milestone_deadline_color milestone %}">completed: <strong>{{ milestone.last_status_change.timestamp|date:"Y-m-d" }}</strong></div>
 					{% endif %}
 				</div>
 			</div>
@@ -42,10 +42,10 @@
 			<div id="milestone{{ milestone.id }}" class="milestoneOnHold milestone floatContainer">
 				<div class="msPercCompleted" style="background: {% perc_colorizer milestone.perc_completed %}; border-color: {% perc_colorizer_dark milestone.perc_completed 50 %}">{{ milestone.perc_completed|floatformat:2 }}%</div>
 				<div class="msMeta">
-					<div class="msName">{{ milestone.name }}</div>
+					<div class="msName"><a href="{% url pm_milestones category.id %}">{{ milestone.name }}</a></div>
 					<div class="msDescription">{{ milestone.description }}</div>
 					{% if milestone.last_status_change %}
-					<div class="msDeadline">placed on-hold: <strong>{{ milestone.last_status_change.timestamp|date:"Y-m-d" }}</strong> - <em>{{ milestone.last_status_change.reason }}</em></div>
+					<div class="msDeadline" style="color: {% milestone_deadline_color milestone %}">placed on-hold: <strong>{{ milestone.last_status_change.timestamp|date:"Y-m-d" }}</strong> - <em>{{ milestone.last_status_change.reason }}</em></div>
 					{% endif %}
 				</div>
 			</div>
