updated css and milestone style for report
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3473 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/apps/projman/templates/milestones_css.html
+++ b/apps/projman/templates/milestones_css.html
@@ -4,24 +4,28 @@
 }
 
 .milestonesHeader {
-	font-size: 12px;
+	/*font-size: 12px;
 	font-weight: bold;
 	margin-bottom: 1em;
 	padding: 4px;
-	border-bottom: 1px solid #f0f0f0;
+	border-bottom: 1px solid #f0f0f0;*/
+	vertical-align: middle;
 }
 
 .milestonesActiveHeader {
+	background: #fbf4d8;
 }
 
-.milestonesComplete {
+.milestonesCompleteHeader {
+	background: #cef4c6;
 }
 
 .milestonesOnHoldHeader {
+	background: #f4c6c6;
 }
 
 .milestones {
-	margin: 0 35px 1em 35px;
+	/*margin: 0 35px 1em 35px;*/
 }
 
 .milestones .milestone {
