--- a/apps/projman/templates/report_weekly.html
+++ b/apps/projman/templates/report_weekly.html
@@ -5,10 +5,15 @@
 
 {% block content %}
 {% include "milestones_css.html" %}
-<style type="text/css">
-	.milestonesHeader {
-		margin-top: 10px;
+<style type="text/css" media="print">
+	a {
+		text-decoration: none;
 	}
+</style>
+<style type="text/css">
+	/*.milestonesHeader {
+		margin-top: 10px;
+	} */
 	.msMeta {
 		width: 470px;
 	}
