--- a/apps/projman/templates/home.html
+++ b/apps/projman/templates/home.html
@@ -6,9 +6,9 @@
 {% block content %}
 {% include "milestones_css.html" %}
 <style type="text/css">
-	.milestonesHeader {
+	/*.milestonesHeader {
 		margin-top: 10px;
-	}
+	}*/
 	.msMeta {
 		width: 470px;
 	}
