--- a/apps/projman/templates/show_milestones.html
+++ b/apps/projman/templates/show_milestones.html
@@ -2,55 +2,76 @@
 
 {% if any_milestones %}
 	<div class="homeHeader">Milestones:</div>
-	<div class="milestonesContainer">
+	<div class="milestonesContainer floatContainer">
 	{% if milestones_active.count %}
-		<div class="milestonesActiveHeader milestonesHeader">Active:</div>
-		<div class="milestonesActive milestones">
-		{% for milestone in milestones_active %}
-			<div id="milestone{{ milestone.id }}" class="milestoneOverview milestone floatContainer">
-				<div class="msPercCompleted" style="background: {% perc_colorizer milestone.perc_completed %}; border-color: {% perc_colorizer_dark milestone.perc_completed 50 %}">{{ milestone.perc_completed|floatformat:2 }}%</div>
-				<div class="msMeta">
-					<div class="msName"><a href="{% url pm_milestones category.id %}">{{ milestone.name }}</a></div>
-					<div class="msDescription">{{ milestone.description }}</div>
-					<div class="msDeadline" style="color: {% milestone_deadline_color milestone %}">started <strong>{{ milestone.created|date:"Y-m-d" }}</strong> - deadline <strong>{{ milestone.deadline|date:"Y-m-d" }}</strong> - {% milestone_days_remaining milestone %}</div>
-				</div>
-			</div>
-		{% endfor %}
-		</div>
+		<table cellspacing="0">
+			<tr>
+				<td class="milestonesActiveHeader milestonesHeader"><img src="/site_media/images/active.gif"/></td>
+				<td style="vertical-align: top; padding-left: 10px;">
+					<div class="milestonesActive milestones">
+					{% for milestone in milestones_active %}
+						<div id="milestone{{ milestone.id }}" class="milestoneOverview milestone floatContainer">
+							<div class="msPercCompleted" style="background: {% perc_colorizer milestone.perc_completed %}; border-color: {% perc_colorizer_dark milestone.perc_completed 50 %}">{{ milestone.perc_completed|floatformat:2 }}%</div>
+							<div class="msMeta">
+								<div class="msName"><a href="{% url pm_milestones category.id %}">{{ milestone.name }}</a></div>
+								<div class="msDescription">{{ milestone.description }}</div>
+								<div class="msDeadline" style="color: {% milestone_deadline_color milestone %}">started <strong>{{ milestone.created|date:"Y-m-d" }}</strong> - deadline <strong>{{ milestone.deadline|date:"Y-m-d" }}</strong> - {% milestone_days_remaining milestone %}</div>
+							</div>
+						</div>
+					{% endfor %}
+					</div>
+				</td>
+			</tr>
+		</table>
+		<div style="clear: both;"></div>
 	{% endif %}
 	{% if milestones_complete.count %}
-		<div class="milestonesCompleteHeader milestonesHeader">Complete:</div>
-		<div class="milestonesComplete milestones">
-		{% for milestone in milestones_complete %}
-			<div id="milestone{{ milestone.id }}" class="milestoneComplete milestone floatContainer">
-				<div class="msPercCompleted" style="background: {% perc_colorizer milestone.perc_completed %}; border-color: {% perc_colorizer_dark milestone.perc_completed 50 %}">{{ milestone.perc_completed|floatformat:2 }}%</div>
-				<div class="msMeta">
-					<div class="msName"><a href="{% url pm_milestones category.id %}">{{ milestone.name }}</a></div>
-					<div class="msDescription">{{ milestone.description }}</div>
-					{% if milestone.last_status_change %}
-					<div class="msDeadline" style="color: {% milestone_deadline_color milestone %}">completed: <strong>{{ milestone.last_status_change.timestamp|date:"Y-m-d" }}</strong></div>
-					{% endif %}
-				</div>
-			</div>
-		{% endfor %}
-		</div>
+		<table cellspacing="0">
+			<tr>
+				<td class="milestonesCompleteHeader milestonesHeader"><img src="/site_media/images/completed.gif"/></td>
+				<td style="vertical-align: top; padding-left: 10px;">
+					<div class="milestonesComplete milestones">
+					{% for milestone in milestones_complete %}
+						<div id="milestone{{ milestone.id }}" class="milestoneComplete milestone floatContainer">
+							<div class="msPercCompleted" style="background: {% perc_colorizer milestone.perc_completed %}; border-color: {% perc_colorizer_dark milestone.perc_completed 50 %}">{{ milestone.perc_completed|floatformat:2 }}%</div>
+							<div class="msMeta">
+								<div class="msName"><a href="{% url pm_milestones category.id %}">{{ milestone.name }}</a></div>
+								<div class="msDescription">{{ milestone.description }}</div>
+								{% if milestone.last_status_change %}
+								<div class="msDeadline" style="color: {% milestone_deadline_color milestone %}">completed: <strong>{{ milestone.last_status_change.timestamp|date:"Y-m-d" }}</strong></div>
+								{% endif %}
+							</div>
+						</div>
+					{% endfor %}
+					</div>
+				</td>
+			</tr>
+		</table>
+		<div style="clear: both;"></div>
 	{% endif %}
 	{% if milestones_onhold.count %}
-		<div class="milestonesOnHoldHeader milestonesHeader">On-Hold:</div>
-		<div class="milestonesOnHold milestones">
-		{% for milestone in milestones_onhold %}
-			<div id="milestone{{ milestone.id }}" class="milestoneOnHold milestone floatContainer">
-				<div class="msPercCompleted" style="background: {% perc_colorizer milestone.perc_completed %}; border-color: {% perc_colorizer_dark milestone.perc_completed 50 %}">{{ milestone.perc_completed|floatformat:2 }}%</div>
-				<div class="msMeta">
-					<div class="msName"><a href="{% url pm_milestones category.id %}">{{ milestone.name }}</a></div>
-					<div class="msDescription">{{ milestone.description }}</div>
-					{% if milestone.last_status_change %}
-					<div class="msDeadline" style="color: {% milestone_deadline_color milestone %}">placed on-hold: <strong>{{ milestone.last_status_change.timestamp|date:"Y-m-d" }}</strong> - <em>{{ milestone.last_status_change.reason }}</em></div>
-					{% endif %}
-				</div>
-			</div>
-		{% endfor %}
-		</div>
+		<table cellspacing="0">
+			<tr>
+				<td class="milestonesOnHoldHeader milestonesHeader"><img src="/site_media/images/onhold.gif"/></td>
+				<td style="vertical-align: top; padding-left: 10px;">
+					<div class="milestonesOnHold milestones">
+					{% for milestone in milestones_onhold %}
+						<div id="milestone{{ milestone.id }}" class="milestoneOnHold milestone floatContainer">
+							<div class="msPercCompleted" style="background: {% perc_colorizer milestone.perc_completed %}; border-color: {% perc_colorizer_dark milestone.perc_completed 50 %}">{{ milestone.perc_completed|floatformat:2 }}%</div>
+							<div class="msMeta">
+								<div class="msName"><a href="{% url pm_milestones category.id %}">{{ milestone.name }}</a></div>
+								<div class="msDescription">{{ milestone.description }}</div>
+								{% if milestone.last_status_change %}
+								<div class="msDeadline" style="color: {% milestone_deadline_color milestone %}">placed on-hold: <strong>{{ milestone.last_status_change.timestamp|date:"Y-m-d" }}</strong> - <em>{{ milestone.last_status_change.reason }}</em></div>
+								{% endif %}
+							</div>
+						</div>
+					{% endfor %}
+					</div>
+				</td>
+			</tr>
+		</table>
+		<div style="clear: both;"></div>
 	{% endif %}
 	</div>
 {% endif %}
