do not show old completed milestones, order by deadline
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3483 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/apps/projman/templates/milestones.html
+++ b/apps/projman/templates/milestones.html
@@ -89,7 +89,7 @@
 		<td style="vertical-align: top;">
 			<div class="categoryLink" rel="{{ category.id }}">
 				<ul class="milestones" rel="milestone">
-					{% for milestone in category.milestone_set.all %}
+					{% for milestone in milestones %}
 						<li id="milestone{{ milestone.id }}" class="milestone milestoneLink" rel="{{ milestone.id }}">
 							<div class="msMetaBanner floatContainer">
 								<div class="msPercCompleted" style="background: {% perc_colorizer milestone.perc_completed %}; border-color: {% perc_colorizer_dark milestone.perc_completed 50 %}">{{ milestone.perc_completed|floatformat:2 }}%</div>
