--- a/apps/projman/templates/report_weekly.html
+++ b/apps/projman/templates/report_weekly.html
@@ -21,13 +21,13 @@
 <div id="account" rel="{{ request.account.id }}">
 	<div id="categories">
 		{% for category in request.account.category_set.all %}
-		{% if category.milestone_set.count %}
-		<div id="category{{ category.id }}" rel="{{ category.id }}" class="category">
-			<h1><a href="{% url pm_delcategory category.id %}"><img src="/site_media/images/report_delete.gif" alt="Delete Category"/></a> <a href="{% url pm_overview category.id %}"><span class="categoryName" rel="name">{{ category.name }}</span></a></h1>
-			<div class="categoryDescription" rel="description">{{ category.description }}</div>
-			{% show_milestones category %}
-		</div>
-		{% endif %}
+			{% if category.any_milestones %}
+			<div id="category{{ category.id }}" rel="{{ category.id }}" class="category">
+				<h1><a href="{% url pm_delcategory category.id %}"><img src="/site_media/images/report_delete.gif" alt="Delete Category"/></a> <a href="{% url pm_overview category.id %}"><span class="categoryName" rel="name">{{ category.name }}</span></a></h1>
+				<div class="categoryDescription" rel="description">{{ category.description }}</div>
+				{% show_milestones category %}
+			</div>
+			{% endif %}
 		{% endfor %}
 	</div>
 </div>
