made updates to milestones page
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@6051 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/apps/projman/templates/home.html
+++ b/apps/projman/templates/home.html
@@ -41,11 +41,13 @@
 						<li class="categoryLink" rel="{{ category.id }}"><span class="handle"><img src="/site_media/images/list_ordered.gif"/></span> <a href="#category{{ category.id }}">{{ category.name }}</a>
 							<ul class="milestoneLinks" rel="milestone">
 							{% for milestone in category.milestone_set.all %}
+								{% ifnotequal milestone.status 'complete' %}
 								<li class="milestoneLink" rel="{{ milestone.id }}">
 									<div style="float: left; padding-top:3px;"><span class="handle"><img src="/site_media/images/list_ordered.gif"/></span></div>
 									<div style="float: left; margin-left: 5px; width: 215px;"><a href="#milestone{{ milestone.id }}">{{ milestone.name }}</a></div>
 									<div style="clear: both;"></div>
 								</li>
+								{% endifnotequal %}
 							{% endfor %}
 							</ul>
 						</li>
