fixed :select issue
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@6179 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/apps/projman/templates/milestones.html
+++ b/apps/projman/templates/milestones.html
@@ -188,7 +188,7 @@
 			
 			$('.addProjectToMilestoneLink').click(function() {
 					var milestone = $(this).parents('.milestone');
-					$.post('{% url pm_addprojecttomilestone %}', { 'milestone_id': milestone.attr('rel'), 'project_id': $(':select[name=project_id]', milestone).val() }, 
+					$.post('{% url pm_addprojecttomilestone %}', { 'milestone_id': milestone.attr('rel'), 'project_id': $('select[name=project_id]', milestone).val() }, 
 						function(response) {
 							$('.msPercCompleted', milestone).text(response.milestone_perc_completed+'%');
 							var el = $('<div>')
